Returned functionality to pictures. Now hovering over the developer part will show the animation of the progress bars from start

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,11 @@ p {
 .ranking {
     font-size: 1rem;
     color: #C0C0C0;
+    margin-bottom: 0;
+}
+
+.ranking-rule {
+    margin-top: 0;
 }
 
 .skill-logo {
