Provisionally finished the 'moved' map, with an 8-bit style. Might change the colour palettes depending on the feedback I get.

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ p {
 /* MAPS */
 .countries {
     fill: #010a43;
+    /* fill: #2F2B5A; */
     stroke: #6cb0e0;
     stroke-width: 0.5px;
     stroke-linecap: round;
@@ -149,25 +150,51 @@ p {
 }
 
 .airports {
-    fill: #036;
-    stroke: #6cb0e0;
-    stroke-width: 0.5px;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    vector-effect: non-scaling-stroke;
+    /* fill: #a8e1bf; */
+    fill: #FFC2C2;
 }
 
 #d3-map {
-    background-color: #146b8a;
+    border-radius: 15px;
+    font-family: 'VT323', monospace;
+    /* background-color: #107189; */
+    /* background-color: #8C6E88; */
+    background-color: #56476D;
 }
 
 .plane {
-    fill: #ffc2c2;
+    /* fill: #a8e1bf; */
+    fill: #FFC2C2;
 }
 
 .map-text {
-    fill: #ffc2c2;
-    font-size: 0.5rem;
+    /* fill: #a8e1bf; */
+    fill: #FFC2C2;
+    font-size: 0.7rem;
+}
+
+.map-screen {
+    /* fill: #56476D; */
+    /* fill: #010a43; */
+    fill: #01072D;
+}
+
+.location-text {
+    /* fill: #a8e1bf; */
+    fill: #FFC2C2;
+    font-size: 1.5rem;
+}
+
+.city-text {
+    /* fill: #a8e1bf; */
+    fill: #FFC2C2;
+    font-size: 2rem;
+}
+
+.coords-text {
+    /* fill: #a8e1bf; */
+    fill: #FFC2C2;
+    font-size: 0.625rem;
 }
 
 .route {
