--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,13 @@ p {
     color: #ffc2c2;
 }
 
+.responsive {
+    height: 40rem;
+}
+
 .landing-picture {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #nyu {
@@ -124,7 +129,7 @@ p {
     font-size: 1.5rem;
 }
 
-.edu-button {
+/* .edu-button {
     background-color: #010a43;
     margin: 0 5%;
 }
@@ -132,7 +137,7 @@ p {
 .edu-button-pressed {
     color: #010a43;
     background-color: #ffc2c2;
-}
+} */
 
 .nyu-logo {
     width: 75%;
