--- a/css/styles.css
+++ b/css/styles.css
@@ -50,13 +50,9 @@ p {
     color: #ffc2c2;
 }
 
-.responsive {
-    height: 40rem;
-}
-
 .landing-picture {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 75%;
+    height: auto;
 }
 
 #nyu {
