Fixed some sizing with the maps and changed the text content a bit. Next will be adding something for 'data visualisation' and for 'music' hovers

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ p {
 }
 
 .python-bar {
-    background-color: #ffe873;
+    background-color: #306998;
 }
 
 .html-bar {
@@ -93,7 +93,7 @@ p {
 }
 
 .js-bar {
-    background-color: #F0DB4F;
+    background-color: #323330;
 }
 
 .java-bar {
