--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5, h6 {
     color: #010a43;
 }
 
+h4 {
+    font-size: 1.0rem;
+}
+
 p {
     font-size: 1.5rem;
     line-height: 1.5;
